<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:text="@string/data_diri_nmahasiswa_nuniversitas_kuningan"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="40dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="25"
            android:text="@string/nama_n_ntempat_tanggal_lahir_n_njenis_kelamin_n_ngol_darah_n_nalamat_n_n_t_t_trt_rw_n_n_t_t_tkel_desa_n_n_t_t_tkecamatan_n_nagama_n_nstatus_n_npekerjaan_n_nkewarganegaraan"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="25"
            android:text="@string/n_n_n_n_n_n_n_n_n_n_n_n_n_n_n_n_n_n_n_n_n_n_n"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="25"
            android:text="@string/egy_firmansyah_n_nkuningan_23_maret_2000_n_n_nlaki_laki_n_n_o_n_nperum_grand_amelia_blok_h_no_5_n_n_08_03_n_nkedungarum_n_nkuningan_n_nislam_n_nbelum_menikah_n_nmahasiswa_n_nindonesia"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="9"
            android:text="@string/nkuningan_16_maret_2023_n_n_n_n_n_negy_firmansyah"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="1dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/foto_"
            android:contentDescription="@string/todo" />


    </LinearLayout>


</LinearLayout>